--- a/exercícios/ex22/fundo004.html
+++ b/exercícios/ex22/fundo004.html
@@ -4,15 +4,18 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Personalização de Fundo</title>
+    <title>Posicionamento/title>
     <style>
         body {
-            background-image: url(images/pattern001.png);
+            height: 97vh;
+            background-image: url(https://gustavoguanabara.github.io/html-css/imagens/mascote.png);
             background-repeat: no-repeat;
+            background-size: 100px;
+            background-position: center center;
         }
     </style>
 </head>
 <body>
-
+    
 </body>
 </html>
