--- a/exercícios/ex22/fundo005.html
+++ b/exercícios/ex22/fundo005.html
@@ -4,15 +4,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Personalização de Fundo</title>
+    <title>Posicionamento</title>
     <style>
         body {
-            background-image: url(images/pattern001.png);
+            height: 97vh;
+            background-image: url(images/wallpaper003.jpg);
             background-repeat: no-repeat;
+            background-position: center center;
         }
     </style>
 </head>
 <body>
-
+    
 </body>
 </html>
