--- a/exercícios/ex22/fundo006.html
+++ b/exercícios/ex22/fundo006.html
@@ -4,15 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Personalização de Fundo</title>
-    <style>
-        body {
-            background-image: url(images/pattern001.png);
-            background-repeat: no-repeat;
-        }
-    </style>
+    <title>Tamanho da Imagem de Fundo</title>
 </head>
 <body>
-
+    
 </body>
 </html>
