--- a/exercícios/ex22/fundo006.html
+++ b/exercícios/ex22/fundo006.html
@@ -5,8 +5,60 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tamanho da Imagem de Fundo</title>
+    <style>
+        body {
+            height: 100vh;
+            background-color: black;
+            background-image: url(images/wallpaper002.jpg);
+            background-repeat: repeat-y;
+            background-position: center center;
+            background-size: cover;
+        }
+
+        main {
+            background-color: white;
+            width: 500px;
+            border: 1px solid darkblue;
+            border-radius: 10px;
+            padding: 10px;
+            margin: auto;
+        }
+
+        h1 {
+            text-align: center;
+        }
+    </style>
 </head>
 <body>
-    
+    <main>
+        <h1>Teste de Imagem de Fundo</h1>
+        <p>
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Deleniti, quae delectus dolorum error incidunt nobis quos et autem? Ipsam voluptatibus laboriosam aliquid labore dignissimos architecto eos, nobis numquam deserunt iure? Lorem ipsum dolor sit, amet consectetur adipisicing elit. Enim assumenda doloribus consequuntur quas laboriosam? Quibusdam maiores eos quisquam impedit recusandae fugiat in laboriosam tempore ratione optio? Harum, quod. Doloremque, laudantium. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Optio vitae earum repellendus et praesentium suscipit natus quos dolorum possimus accusamus necessitatibus ea incidunt qui, veritatis autem nobis culpa, facilis illo?
+        </p>
+        <p>
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Deleniti, quae delectus dolorum error incidunt nobis quos et autem? Ipsam voluptatibus laboriosam aliquid labore dignissimos architecto eos, nobis numquam deserunt iure? Lorem ipsum dolor sit, amet consectetur adipisicing elit. Enim assumenda doloribus consequuntur quas laboriosam? Quibusdam maiores eos quisquam impedit recusandae fugiat in laboriosam tempore ratione optio? Harum, quod. Doloremque, laudantium. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Optio vitae earum repellendus et praesentium suscipit natus quos dolorum possimus accusamus necessitatibus ea incidunt qui, veritatis autem nobis culpa, facilis illo?
+        </p>
+        <p>
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Deleniti, quae delectus dolorum error incidunt nobis quos et autem? Ipsam voluptatibus laboriosam aliquid labore dignissimos architecto eos, nobis numquam deserunt iure? Lorem ipsum dolor sit, amet consectetur adipisicing elit. Enim assumenda doloribus consequuntur quas laboriosam? Quibusdam maiores eos quisquam impedit recusandae fugiat in laboriosam tempore ratione optio? Harum, quod. Doloremque, laudantium. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Optio vitae earum repellendus et praesentium suscipit natus quos dolorum possimus accusamus necessitatibus ea incidunt qui, veritatis autem nobis culpa, facilis illo?
+        </p>
+        <p>
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Deleniti, quae delectus dolorum error incidunt nobis quos et autem? Ipsam voluptatibus laboriosam aliquid labore dignissimos architecto eos, nobis numquam deserunt iure? Lorem ipsum dolor sit, amet consectetur adipisicing elit. Enim assumenda doloribus consequuntur quas laboriosam? Quibusdam maiores eos quisquam impedit recusandae fugiat in laboriosam tempore ratione optio? Harum, quod. Doloremque, laudantium. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Optio vitae earum repellendus et praesentium suscipit natus quos dolorum possimus accusamus necessitatibus ea incidunt qui, veritatis autem nobis culpa, facilis illo?
+        </p>
+        <p>
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Deleniti, quae delectus dolorum error incidunt nobis quos et autem? Ipsam voluptatibus laboriosam aliquid labore dignissimos architecto eos, nobis numquam deserunt iure? Lorem ipsum dolor sit, amet consectetur adipisicing elit. Enim assumenda doloribus consequuntur quas laboriosam? Quibusdam maiores eos quisquam impedit recusandae fugiat in laboriosam tempore ratione optio? Harum, quod. Doloremque, laudantium. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Optio vitae earum repellendus et praesentium suscipit natus quos dolorum possimus accusamus necessitatibus ea incidunt qui, veritatis autem nobis culpa, facilis illo?
+        </p>
+        <p>
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Deleniti, quae delectus dolorum error incidunt nobis quos et autem? Ipsam voluptatibus laboriosam aliquid labore dignissimos architecto eos, nobis numquam deserunt iure? Lorem ipsum dolor sit, amet consectetur adipisicing elit. Enim assumenda doloribus consequuntur quas laboriosam? Quibusdam maiores eos quisquam impedit recusandae fugiat in laboriosam tempore ratione optio? Harum, quod. Doloremque, laudantium. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Optio vitae earum repellendus et praesentium suscipit natus quos dolorum possimus accusamus necessitatibus ea incidunt qui, veritatis autem nobis culpa, facilis illo?
+        </p>
+        <p>
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Deleniti, quae delectus dolorum error incidunt nobis quos et autem? Ipsam voluptatibus laboriosam aliquid labore dignissimos architecto eos, nobis numquam deserunt iure? Lorem ipsum dolor sit, amet consectetur adipisicing elit. Enim assumenda doloribus consequuntur quas laboriosam? Quibusdam maiores eos quisquam impedit recusandae fugiat in laboriosam tempore ratione optio? Harum, quod. Doloremque, laudantium. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Optio vitae earum repellendus et praesentium suscipit natus quos dolorum possimus accusamus necessitatibus ea incidunt qui, veritatis autem nobis culpa, facilis illo?
+        </p>
+        <p>
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Deleniti, quae delectus dolorum error incidunt nobis quos et autem? Ipsam voluptatibus laboriosam aliquid labore dignissimos architecto eos, nobis numquam deserunt iure? Lorem ipsum dolor sit, amet consectetur adipisicing elit. Enim assumenda doloribus consequuntur quas laboriosam? Quibusdam maiores eos quisquam impedit recusandae fugiat in laboriosam tempore ratione optio? Harum, quod. Doloremque, laudantium. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Optio vitae earum repellendus et praesentium suscipit natus quos dolorum possimus accusamus necessitatibus ea incidunt qui, veritatis autem nobis culpa, facilis illo?
+        </p>
+        <p>
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Deleniti, quae delectus dolorum error incidunt nobis quos et autem? Ipsam voluptatibus laboriosam aliquid labore dignissimos architecto eos, nobis numquam deserunt iure? Lorem ipsum dolor sit, amet consectetur adipisicing elit. Enim assumenda doloribus consequuntur quas laboriosam? Quibusdam maiores eos quisquam impedit recusandae fugiat in laboriosam tempore ratione optio? Harum, quod. Doloremque, laudantium. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Optio vitae earum repellendus et praesentium suscipit natus quos dolorum possimus accusamus necessitatibus ea incidunt qui, veritatis autem nobis culpa, facilis illo?
+        </p>
+    </main>
 </body>
 </html>
