--- a/exercícios/ex22/fundo006.html
+++ b/exercícios/ex22/fundo006.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,10 +9,17 @@
     <style>
         body {
             height: 100vh;
+            /*
             background-color: black;
             background-image: url(images/wallpaper002.jpg);
             background-repeat: repeat-y;
             background-position: center center;
+            background-size: cover;
+            background-attachment
+            */
+
+            /* Shorthand - Background (size não funciona) */
+            background: black url(images/wallpaper002.jpg) center center no-repeat fixed;
             background-size: cover;
         }
 
@@ -29,36 +37,92 @@
         }
     </style>
 </head>
+
 <body>
     <main>
         <h1>Teste de Imagem de Fundo</h1>
         <p>
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Deleniti, quae delectus dolorum error incidunt nobis quos et autem? Ipsam voluptatibus laboriosam aliquid labore dignissimos architecto eos, nobis numquam deserunt iure? Lorem ipsum dolor sit, amet consectetur adipisicing elit. Enim assumenda doloribus consequuntur quas laboriosam? Quibusdam maiores eos quisquam impedit recusandae fugiat in laboriosam tempore ratione optio? Harum, quod. Doloremque, laudantium. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Optio vitae earum repellendus et praesentium suscipit natus quos dolorum possimus accusamus necessitatibus ea incidunt qui, veritatis autem nobis culpa, facilis illo?
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Deleniti, quae delectus dolorum error incidunt
+            nobis quos et autem? Ipsam voluptatibus laboriosam aliquid labore dignissimos architecto eos, nobis numquam
+            deserunt iure? Lorem ipsum dolor sit, amet consectetur adipisicing elit. Enim assumenda doloribus
+            consequuntur quas laboriosam? Quibusdam maiores eos quisquam impedit recusandae fugiat in laboriosam tempore
+            ratione optio? Harum, quod. Doloremque, laudantium. Lorem, ipsum dolor sit amet consectetur adipisicing
+            elit. Optio vitae earum repellendus et praesentium suscipit natus quos dolorum possimus accusamus
+            necessitatibus ea incidunt qui, veritatis autem nobis culpa, facilis illo?
         </p>
         <p>
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Deleniti, quae delectus dolorum error incidunt nobis quos et autem? Ipsam voluptatibus laboriosam aliquid labore dignissimos architecto eos, nobis numquam deserunt iure? Lorem ipsum dolor sit, amet consectetur adipisicing elit. Enim assumenda doloribus consequuntur quas laboriosam? Quibusdam maiores eos quisquam impedit recusandae fugiat in laboriosam tempore ratione optio? Harum, quod. Doloremque, laudantium. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Optio vitae earum repellendus et praesentium suscipit natus quos dolorum possimus accusamus necessitatibus ea incidunt qui, veritatis autem nobis culpa, facilis illo?
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Deleniti, quae delectus dolorum error incidunt
+            nobis quos et autem? Ipsam voluptatibus laboriosam aliquid labore dignissimos architecto eos, nobis numquam
+            deserunt iure? Lorem ipsum dolor sit, amet consectetur adipisicing elit. Enim assumenda doloribus
+            consequuntur quas laboriosam? Quibusdam maiores eos quisquam impedit recusandae fugiat in laboriosam tempore
+            ratione optio? Harum, quod. Doloremque, laudantium. Lorem, ipsum dolor sit amet consectetur adipisicing
+            elit. Optio vitae earum repellendus et praesentium suscipit natus quos dolorum possimus accusamus
+            necessitatibus ea incidunt qui, veritatis autem nobis culpa, facilis illo?
         </p>
         <p>
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Deleniti, quae delectus dolorum error incidunt nobis quos et autem? Ipsam voluptatibus laboriosam aliquid labore dignissimos architecto eos, nobis numquam deserunt iure? Lorem ipsum dolor sit, amet consectetur adipisicing elit. Enim assumenda doloribus consequuntur quas laboriosam? Quibusdam maiores eos quisquam impedit recusandae fugiat in laboriosam tempore ratione optio? Harum, quod. Doloremque, laudantium. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Optio vitae earum repellendus et praesentium suscipit natus quos dolorum possimus accusamus necessitatibus ea incidunt qui, veritatis autem nobis culpa, facilis illo?
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Deleniti, quae delectus dolorum error incidunt
+            nobis quos et autem? Ipsam voluptatibus laboriosam aliquid labore dignissimos architecto eos, nobis numquam
+            deserunt iure? Lorem ipsum dolor sit, amet consectetur adipisicing elit. Enim assumenda doloribus
+            consequuntur quas laboriosam? Quibusdam maiores eos quisquam impedit recusandae fugiat in laboriosam tempore
+            ratione optio? Harum, quod. Doloremque, laudantium. Lorem, ipsum dolor sit amet consectetur adipisicing
+            elit. Optio vitae earum repellendus et praesentium suscipit natus quos dolorum possimus accusamus
+            necessitatibus ea incidunt qui, veritatis autem nobis culpa, facilis illo?
         </p>
         <p>
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Deleniti, quae delectus dolorum error incidunt nobis quos et autem? Ipsam voluptatibus laboriosam aliquid labore dignissimos architecto eos, nobis numquam deserunt iure? Lorem ipsum dolor sit, amet consectetur adipisicing elit. Enim assumenda doloribus consequuntur quas laboriosam? Quibusdam maiores eos quisquam impedit recusandae fugiat in laboriosam tempore ratione optio? Harum, quod. Doloremque, laudantium. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Optio vitae earum repellendus et praesentium suscipit natus quos dolorum possimus accusamus necessitatibus ea incidunt qui, veritatis autem nobis culpa, facilis illo?
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Deleniti, quae delectus dolorum error incidunt
+            nobis quos et autem? Ipsam voluptatibus laboriosam aliquid labore dignissimos architecto eos, nobis numquam
+            deserunt iure? Lorem ipsum dolor sit, amet consectetur adipisicing elit. Enim assumenda doloribus
+            consequuntur quas laboriosam? Quibusdam maiores eos quisquam impedit recusandae fugiat in laboriosam tempore
+            ratione optio? Harum, quod. Doloremque, laudantium. Lorem, ipsum dolor sit amet consectetur adipisicing
+            elit. Optio vitae earum repellendus et praesentium suscipit natus quos dolorum possimus accusamus
+            necessitatibus ea incidunt qui, veritatis autem nobis culpa, facilis illo?
         </p>
         <p>
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Deleniti, quae delectus dolorum error incidunt nobis quos et autem? Ipsam voluptatibus laboriosam aliquid labore dignissimos architecto eos, nobis numquam deserunt iure? Lorem ipsum dolor sit, amet consectetur adipisicing elit. Enim assumenda doloribus consequuntur quas laboriosam? Quibusdam maiores eos quisquam impedit recusandae fugiat in laboriosam tempore ratione optio? Harum, quod. Doloremque, laudantium. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Optio vitae earum repellendus et praesentium suscipit natus quos dolorum possimus accusamus necessitatibus ea incidunt qui, veritatis autem nobis culpa, facilis illo?
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Deleniti, quae delectus dolorum error incidunt
+            nobis quos et autem? Ipsam voluptatibus laboriosam aliquid labore dignissimos architecto eos, nobis numquam
+            deserunt iure? Lorem ipsum dolor sit, amet consectetur adipisicing elit. Enim assumenda doloribus
+            consequuntur quas laboriosam? Quibusdam maiores eos quisquam impedit recusandae fugiat in laboriosam tempore
+            ratione optio? Harum, quod. Doloremque, laudantium. Lorem, ipsum dolor sit amet consectetur adipisicing
+            elit. Optio vitae earum repellendus et praesentium suscipit natus quos dolorum possimus accusamus
+            necessitatibus ea incidunt qui, veritatis autem nobis culpa, facilis illo?
         </p>
         <p>
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Deleniti, quae delectus dolorum error incidunt nobis quos et autem? Ipsam voluptatibus laboriosam aliquid labore dignissimos architecto eos, nobis numquam deserunt iure? Lorem ipsum dolor sit, amet consectetur adipisicing elit. Enim assumenda doloribus consequuntur quas laboriosam? Quibusdam maiores eos quisquam impedit recusandae fugiat in laboriosam tempore ratione optio? Harum, quod. Doloremque, laudantium. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Optio vitae earum repellendus et praesentium suscipit natus quos dolorum possimus accusamus necessitatibus ea incidunt qui, veritatis autem nobis culpa, facilis illo?
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Deleniti, quae delectus dolorum error incidunt
+            nobis quos et autem? Ipsam voluptatibus laboriosam aliquid labore dignissimos architecto eos, nobis numquam
+            deserunt iure? Lorem ipsum dolor sit, amet consectetur adipisicing elit. Enim assumenda doloribus
+            consequuntur quas laboriosam? Quibusdam maiores eos quisquam impedit recusandae fugiat in laboriosam tempore
+            ratione optio? Harum, quod. Doloremque, laudantium. Lorem, ipsum dolor sit amet consectetur adipisicing
+            elit. Optio vitae earum repellendus et praesentium suscipit natus quos dolorum possimus accusamus
+            necessitatibus ea incidunt qui, veritatis autem nobis culpa, facilis illo?
         </p>
         <p>
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Deleniti, quae delectus dolorum error incidunt nobis quos et autem? Ipsam voluptatibus laboriosam aliquid labore dignissimos architecto eos, nobis numquam deserunt iure? Lorem ipsum dolor sit, amet consectetur adipisicing elit. Enim assumenda doloribus consequuntur quas laboriosam? Quibusdam maiores eos quisquam impedit recusandae fugiat in laboriosam tempore ratione optio? Harum, quod. Doloremque, laudantium. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Optio vitae earum repellendus et praesentium suscipit natus quos dolorum possimus accusamus necessitatibus ea incidunt qui, veritatis autem nobis culpa, facilis illo?
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Deleniti, quae delectus dolorum error incidunt
+            nobis quos et autem? Ipsam voluptatibus laboriosam aliquid labore dignissimos architecto eos, nobis numquam
+            deserunt iure? Lorem ipsum dolor sit, amet consectetur adipisicing elit. Enim assumenda doloribus
+            consequuntur quas laboriosam? Quibusdam maiores eos quisquam impedit recusandae fugiat in laboriosam tempore
+            ratione optio? Harum, quod. Doloremque, laudantium. Lorem, ipsum dolor sit amet consectetur adipisicing
+            elit. Optio vitae earum repellendus et praesentium suscipit natus quos dolorum possimus accusamus
+            necessitatibus ea incidunt qui, veritatis autem nobis culpa, facilis illo?
         </p>
         <p>
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Deleniti, quae delectus dolorum error incidunt nobis quos et autem? Ipsam voluptatibus laboriosam aliquid labore dignissimos architecto eos, nobis numquam deserunt iure? Lorem ipsum dolor sit, amet consectetur adipisicing elit. Enim assumenda doloribus consequuntur quas laboriosam? Quibusdam maiores eos quisquam impedit recusandae fugiat in laboriosam tempore ratione optio? Harum, quod. Doloremque, laudantium. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Optio vitae earum repellendus et praesentium suscipit natus quos dolorum possimus accusamus necessitatibus ea incidunt qui, veritatis autem nobis culpa, facilis illo?
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Deleniti, quae delectus dolorum error incidunt
+            nobis quos et autem? Ipsam voluptatibus laboriosam aliquid labore dignissimos architecto eos, nobis numquam
+            deserunt iure? Lorem ipsum dolor sit, amet consectetur adipisicing elit. Enim assumenda doloribus
+            consequuntur quas laboriosam? Quibusdam maiores eos quisquam impedit recusandae fugiat in laboriosam tempore
+            ratione optio? Harum, quod. Doloremque, laudantium. Lorem, ipsum dolor sit amet consectetur adipisicing
+            elit. Optio vitae earum repellendus et praesentium suscipit natus quos dolorum possimus accusamus
+            necessitatibus ea incidunt qui, veritatis autem nobis culpa, facilis illo?
         </p>
         <p>
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Deleniti, quae delectus dolorum error incidunt nobis quos et autem? Ipsam voluptatibus laboriosam aliquid labore dignissimos architecto eos, nobis numquam deserunt iure? Lorem ipsum dolor sit, amet consectetur adipisicing elit. Enim assumenda doloribus consequuntur quas laboriosam? Quibusdam maiores eos quisquam impedit recusandae fugiat in laboriosam tempore ratione optio? Harum, quod. Doloremque, laudantium. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Optio vitae earum repellendus et praesentium suscipit natus quos dolorum possimus accusamus necessitatibus ea incidunt qui, veritatis autem nobis culpa, facilis illo?
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Deleniti, quae delectus dolorum error incidunt
+            nobis quos et autem? Ipsam voluptatibus laboriosam aliquid labore dignissimos architecto eos, nobis numquam
+            deserunt iure? Lorem ipsum dolor sit, amet consectetur adipisicing elit. Enim assumenda doloribus
+            consequuntur quas laboriosam? Quibusdam maiores eos quisquam impedit recusandae fugiat in laboriosam tempore
+            ratione optio? Harum, quod. Doloremque, laudantium. Lorem, ipsum dolor sit amet consectetur adipisicing
+            elit. Optio vitae earum repellendus et praesentium suscipit natus quos dolorum possimus accusamus
+            necessitatibus ea incidunt qui, veritatis autem nobis culpa, facilis illo?
         </p>
     </main>
 </body>
+
 </html>
