--- a/exercícios/ex25/form004.html
+++ b/exercícios/ex25/form004.html
@@ -12,25 +12,26 @@
     <h1>Teste de Formulários</h1>
 
     <form action="" method="get" autocomplete="on">
-        <p>
-            <label for="inome">Nome:</label>
-            <input type="text" name="nome" id="inome" required maxlength="20" autocomplete="name">
-        </p>
-
-        <p>
-            <label for="iemail">Email</label>
-            <input type="email" name="email" id="iemail" required maxlength="20" minlength="5" autocomplete="email">
-        </p>
-
-        <p>
-            <label for="itel">Telefone:</label>
-            <input type="tel" name="tel" id="itel" required autocomplete="tel" pattern="^\(\d{2}\) \d{4,5}-\d{4}$" placeholder="(xx) xxxx-xxxx">
-        </p>
-
-        <p>
-            <input type="submit" value="Enviar">
-            <input type="reset" value="Limpar">
-        </p>
+            <fieldset>
+                <legend>Dados Pessoais</legend>
+                <p>
+                    <label for="inome">Nome:</label>
+                    <input type="text" name="nome" id="inome" required maxlength="20" autocomplete="name">
+                </p>
+                <p>
+                    <label for="iemail">Email</label>
+                    <input type="email" name="email" id="iemail" required maxlength="20" minlength="5" autocomplete="email">
+                </p>
+                <p>
+                    <label for="itel">Telefone:</label>
+                    <input type="tel" name="tel" id="itel" required autocomplete="tel" pattern="^\(\d{2}\) \d{4,5}-\d{4}$" placeholder="(xx) xxxx-xxxx">
+                </p>
+                <p>
+                    <input type="submit" value="Enviar">
+                    <input type="reset" value="Limpar">
+                </p>
+            </fieldset>
+        </fieldset>
     </form>
 </body>
 
